# kinectDllWithVS

./: .gitignore  CMakeLists.txt
inc/: DepthPixelColorizer.h  Pixel.h  StaticImageProperties.h  base64.h  getAngel.h  getFiles.hpp  kinectDLL.h  kinect_angle.h  kinect_cv_dk.h  kinect_record.h
src/: CMakeLists.txt  getAngel.cpp  getFiles.cpp  get_roecord_config.cpp  kinectDLL.cpp  kinect_record.cpp
